--- a/gittest.html
+++ b/gittest.html
@@ -1,4 +1,5 @@
 <html>
+    <link rel="stylesheet" href="gittest.css">
 <head>
 
 
@@ -9,5 +10,6 @@
 <body>
     <h1> RESTAURANT</h1>
 </body>
+
 
 </html>
